--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <button id="btn" value="rock">Rock</button>
-        <button id="btn" value="paper">Paper</button>
-        <button id="btn" value="scissors">Scissors</button>
+        <button id="rock" class="btn" value="rock">Rock</button>
+        <button id="paper" class= "btn" value="paper">Paper</button>
+        <button id="scissors" class="btn" value="scissors">Scissors</button>
 
         <p id="result">Please make a selection!</p>
+        <div class="score-div"></div>Player <span id="playerScore"></span> - <span id="computerScore"></span> Computer</div>
+        <div class="text"><span id='pSelection'></span> vs. <span id="cSelection"></span></div>
+
+        <div class="text" id="finalResult"></div>
         
-        <script src="script.js" async defer></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
